updated classes and ids

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
             <div class="card-body">
                 <h2>Search for a City:</h2>
                 <input class="form-control" type="text" placeholder="e.g. Atlanta">
-                <button class="btn btn-primary">Search</button>
+                <button class="btn btn-primary" id="search-btn">Search</button>
             </div>
         </div>
     <div class="container">  
         <div class="card">
             <div class="card-body">
-                <h2>Atlanta</h2>
-                    <p>Temp:</p>
-                    <p>Wind:</p>
-                    <p>Humidity:</p>
-                    <p>UV Index:</p>
+                <h2 id="city">Atlanta</h2>
+                    <p id="temp">Temp:</p>
+                    <p id="wind">Wind:</p>
+                    <p id="humidity">Humidity:</p>
+                    <p id="uv-index">UV Index:</p>
             </div>
         </div>
     </div>  
@@ -32,29 +32,34 @@
         <h2>5 Day Forecast</h2>
         <div class="card bg-dark">
             <div class="card-body">
-                <h3></h3>
+                <h3>Date</h3>
+                    <p id="dTemp0"></p>
             </div>
         </div>
         <div class="card bg-dark">
             <div class="card-body">
-                <h3></h3>
+                <h3>Date</h3>
+                    <p id="dTemp1"></p>
             </div>
         </div>
         <div class="card bg-dark">
             <div class="card-body">
-                <h3></h3>
+                <h3>Date</h3>
+                    <p id="dTemp2"></p>
             </div>
         </div>
         <div class="card bg-dark">
             <div class="card-body">
-                <h3></h3>
+                <h3>Date</h3>
+                    <p id="dTemp3"></p>
             </div>
         </div>
         <div class="card bg-dark">
             <div class="card-body">
-                <h3></h3>
+                <h3>Date</h3>
+                    <p id="dTemp4"></p>
             </div>
         </div>
-
+<script src="script.js"></script>
 </body>  
 </html>  
