--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">  
         <div class="card">
             <div class="card-body">
-                <h2 id="city">Atlanta</h2>
+                <h2 id="city">City</h2>
                     <p id="temp">Temp:</p>
                     <p id="wind">Wind:</p>
                     <p id="humidity">Humidity:</p>
@@ -28,38 +28,56 @@
             </div>
         </div>
     </div>  
-    <div class="container"></div>
+    <div class="container d-flex"></div>
         <h2>5 Day Forecast</h2>
         <div class="card bg-dark">
             <div class="card-body">
-                <h3>Date</h3>
-                    <p id="dTemp0"></p>
+                <h3 class="text-light">Date</h3>
+                    <p class="text-light" id="dTemp0"></p>
+                    <p class="text-light" id="dWind0"></p>
+                    <p class="text-light" id="dHumidity0"></p>
+                    <p class="text-light" id="dUVIndex0"></p>
             </div>
         </div>
         <div class="card bg-dark">
             <div class="card-body">
-                <h3>Date</h3>
-                    <p id="dTemp1"></p>
+                <h3 class="text-light">Date</h3>
+                    <p class="text-light" id="dTemp1"></p>
+                    <p class="text-light" id="dWind1"></p>
+                    <p class="text-light" id="dHumidity1"></p>
+                    <p class="text-light" id="dUVIndex1"></p>
+                    
             </div>
         </div>
         <div class="card bg-dark">
             <div class="card-body">
-                <h3>Date</h3>
-                    <p id="dTemp2"></p>
+                <h3 class="text-light">Date</h3>
+                    <p class="text-light" id="dTemp2"></p>
+                    <p class="text-light" id="dWind2"></p>
+                    <p class="text-light" id="dHumidity2"></p>
+                    <p class="text-light" id="dUVIndex2"></p>
             </div>
         </div>
         <div class="card bg-dark">
             <div class="card-body">
-                <h3>Date</h3>
-                    <p id="dTemp3"></p>
+                <h3 class="text-light">Date</h3>
+                    <p class="text-light" id="dTemp3"></p>
+                    <p class="text-light" id="dWind3"></p>
+                    <p class="text-light" id="dHumidity3"></p>
+                    <p class="text-light" id="dUVIndex3"></p>
             </div>
         </div>
         <div class="card bg-dark">
             <div class="card-body">
-                <h3>Date</h3>
-                    <p id="dTemp4"></p>
+                <h3 class="text-light">Date</h3>
+                    <p class="text-light" id="dTemp4"></p>
+                    <p class="text-light" id="dWind4"></p>
+                    <p class="text-light" id="dHumidity4"></p>
+                    <p class="text-light" id="dUVIndex4"></p>
             </div>
         </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>        
 <script src="script.js"></script>
 </body>  
 </html>  
